--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body {
   width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
   background-color: antiquewhite;
-  font-family: "Times New Roman", Times, serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 #header {
   width: 100%;
